# filedialogs

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml  test.yml
css/: docs.css
docs/: index.md
filedialogs/: __init__.py  filedialogs.py
search/: search_index.json
tests/: manual_tests.py  test_main.py
